force-app/main/default/objects/npsp__Level__c/fields/npsp__Level_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Level_Field__c</fullName>
    <description>Indicates which field to use on the target object to store the current Level.</description>
    <inlineHelpText>Indica qué campo utilizar en el objeto de destino para almacenar el nivel actual.</inlineHelpText>
    <label>Level Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>