force-app/main/default/objects/npsp__Level__c/fields/npsp__Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>npsp__Minimum_Amount__c</fullName>
    <description>The minimum amount needed for NPSP to assign this Level. If this field is empty, then NPSP will assign this Level to any amount less than this Level&apos;s Maximum Amount.</description>
    <inlineHelpText>El importe mínimo necesario para que NPSP asigne este nivel. Si esta vacío, NPSP asignará este nivel a cualquier importe inferior al importe máximo de este nivel.</inlineHelpText>
    <label>Minimum Amount (&gt;=)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>